--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ plugins {
 }
 
 android {
+
+    buildFeatures {
+        viewBinding true
+    }
     namespace 'com.example.cnccodegenerator'
     compileSdk 33
 
