GM code is being geenrated for contour path

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:theme="@style/Theme.CNCCodeGenerator.NoActionBar"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".activities.MillingSketcher"
+            android:theme="@style/Theme.CNCCodeGenerator.NoActionBar"
+            android:exported="true"/>
     </application>
 
 </manifest>
